
-------------------------------------------------------------------------------

Tue Sep 28 00:12:05 PDT 1999
(Mandrake)

fixed the "restart on wrong desktop if it's the last desktop available" bug.

-------------------------------------------------------------------------------

Tue Sep 28 00:44:15 PDT 1999
(Raster)

add bugs to TODO

-------------------------------------------------------------------------------

Tue Sep 28 15:30:03 PDT 1999
(Raster)

and free desktop bgs more aggressively

-------------------------------------------------------------------------------

Wed Sep 29 12:28:22 EST 1999
(Christian)

Added a gkrellm theme to Ganymede.I really like gkrellm.
Could somebody please explain me the name of that thing?  

-------------------------------------------------------------------------------

Wed Sep 29 17:41:37 PDT 1999
(Raster)

shoudl have elleviated focus swtichng problem... :)

-------------------------------------------------------------------------------

Wed Sep 29 17:43:41 PDT 1999
(Raster)

no debugging printf...

-------------------------------------------------------------------------------

Wed Sep 29 17:52:48 PDT 1999
(Raster)

and fix that event mask...

-------------------------------------------------------------------------------

Wed Sep 29 17:56:39 PDT 1999
(Raster)

update TOTO

-------------------------------------------------------------------------------

Wed Sep 29 18:13:37 PDT 1999
(Mandrake)

nuked useless variable + warning

-------------------------------------------------------------------------------

Thu Sep 30 09:44:14 PDT 1999
(Raster)

fix typo in icon settings dialog box

-------------------------------------------------------------------------------

Thu Sep 30 11:55:12 PDT 1999
(Raster)

dont clone iconfiied windows...

-------------------------------------------------------------------------------

Thu Sep 30 16:54:54 PDT 1999
(Raster)

change menus.cfg to use new menus scritps can generate